--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                 <h2 class="third-heading">Our Team</h2>
                     <ul class="list third-html-list">
                         <li class="images-list">
-                            <img src="./images/mark.jpg" width="264" height="260" srcset="./images/mark2x.jpx" alt="Man with black beard in bleu shirt">
+                            <img src="./images/mark.jpg" width="264" height="260" srcset="./images/mark2x.jpg" alt="Man with black beard in bleu shirt">
                             <div class="employees">
                                 <h3 class="third-header">Mark Guerrero</h3> 
                                 <p class="paragraph-employee">Product Designer</p>
